--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   color: #333;
+  background-color: #f0f0f0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -81,10 +82,16 @@ main {
   font-size: 1.2rem;
   color: #ffffff;
 }
-
+.gold {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  color: #00adb5;
+}
 /* Sections */
 section {
-  padding: 3rem 2rem;
+  padding: 2rem 2rem;
   max-width: 900px;
   margin: auto;
 }
@@ -100,6 +107,39 @@ section h2 {
   padding: 0;
   margin: 0 auto;
   max-width: 600px;
+}
+
+.pic-project-list {
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.pic-project-list li {
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.2s;
+  width: fit-content;
+}
+
+.pic-project-list li img {
+  display: block;
+  max-width: 550px;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+  transition: transform 0.3s;
+}
+
+.pic-project-list li:hover img {
+  transform: scale(1.05);
 }
 
 .project-list li {
@@ -206,5 +246,6 @@ footer {
 
   .hero h1 {
     font-size: 2rem;
+    color: #ffffff;
   }
 }
